; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_cmp_map_compat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_cmp_map_compat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfit_set_info_map = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_map_compat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_map_compat(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.nfit_set_info_map*, align 8
  %6 = alloca %struct.nfit_set_info_map*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.nfit_set_info_map*
  store %struct.nfit_set_info_map* %8, %struct.nfit_set_info_map** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.nfit_set_info_map*
  store %struct.nfit_set_info_map* %10, %struct.nfit_set_info_map** %6, align 8
  %11 = load %struct.nfit_set_info_map*, %struct.nfit_set_info_map** %5, align 8
  %12 = getelementptr inbounds %struct.nfit_set_info_map, %struct.nfit_set_info_map* %11, i32 0, i32 0
  %13 = load %struct.nfit_set_info_map*, %struct.nfit_set_info_map** %6, align 8
  %14 = getelementptr inbounds %struct.nfit_set_info_map, %struct.nfit_set_info_map* %13, i32 0, i32 0
  %15 = call i32 @memcmp(i32* %12, i32* %14, i32 4)
  ret i32 %15
}

declare dso_local i32 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
